views: dismiss content setting bubbles when the WebContents closes

This is necessary on Mac because cmd-w works even with a bubble open, which can
dismiss the underlying WebContents.

Bug: 605374
Change-Id: I66558f72d0fbb63eb56ed5469d5789062f654d43
Reviewed-on: https://chromium-review.googlesource.com/906890
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536493}
Former-commit-id: 9abe107b1c15f7ccfcf8de5be8dfc3e3a0b94c92